added highlight js and fixed code blocks

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -45,6 +45,17 @@
     margin-bottom:40px;
 
 }
+/*
+.fixedHeaderContainer {
+    box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28); 
+}
+*/
+
+.navGroupCategoryTitle {
+    font-size:16px!important;
+    font-weight:700;
+    color:#333;
+}
 
 .feature-block:hover {
     background: #fff;
