--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -88,6 +88,20 @@ body {
     color:#555555;
 }
 
+.docsNavContainer::-webkit-scrollbar {
+    background: #f0f0f0;
+    width: 10px;
+    margin-top:10px;
+}
+.docsNavContainer::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+    border-radius: 10px;
+}
+.docsNavContainer::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+}
+
 @media only screen and (min-width: 1024px)
 {.onPageNav > .toc-headings {
     border-left: 2px solid #205482;
