--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -21,6 +21,11 @@
   --ifm-footer-background-color: #2a4d8e;
 }
 
+.footer__link-item:hover {
+  color: lightgray;
+  text-decoration: none;
+}
+
 .docusaurus-highlight-code-line {
   background-color: rgb(72, 77, 91);
   display: block;
